<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_signin">Sign in</string>
    <string name="button_signin">Sign in</string>
    <string name="app_name">Zoodroid</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="hint_username">Your username</string>
    <string name="hint_password">Your password</string>
    
    <string name="title_exception_dialog">Oh my, an error occured!</string>
    <string name="exception_sha1">Couldn\'t load SHA-1 digest</string>
    <string name="exception_protocol">Protocol error</string>
    <string name="exception_connection">Couldn\'t connect to zootool.com</string>
    <string name="exception_response">Couldn\'t read response</string>
    <string name="exception_not_authorized">Invalid username and/or password</string>
</resources>
